--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@ body {
     background-color: aqua;
 }
 
+
+
+#header {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: burlywood;
+    text-align: center;
+    color: white;
+}
+
 #profile-container {
     max-width: 300px;
     background-color: white;
